Add menu and site settings functionality to backend
- Introduced menu and site settings routes in server.ts for API access.
- Implemented menu and site settings controllers to handle CRUD operations.
- Created corresponding models for Menu and SiteSettings to manage data structure.
- Added routes for menus and site settings, including authentication middleware for protected routes.
- Updated Content model to include SEO fields and layout options for enhanced content management.
- Enhanced frontend with new pages and components for managing menus and SEO settings.

--- a/frontend/src/locales/he.json
+++ b/frontend/src/locales/he.json
@@ -33,5 +33,10 @@
   "unauthorized": "אינך מורשה לצפות בדף זה",
   "trainee_dashboard": "לוח בקרה של תלמיד",
   "admin_dashboard": "לוח בקרה של מנהל",
-  "content_management": "ניהול תוכן"
+  "content_management": "ניהול תוכן",
+  "dashboard": "לוח בקרה",
+  "users": "משתמשים",
+  "content": "תוכן",
+  "media": "מדיה",
+  "seo": "קידום אתרים"
 }
