Enhance internationalization and update dashboard components
- Added new translation keys for search functionality in both English and Hebrew JSON files.
- Updated the ContentEditor, MediaManager, and Dashboard components to utilize the new translation structure for improved user experience.
- Refactored loading and error messages to use translated strings, ensuring consistency across the application.
- Improved media management features with enhanced file upload handling and user feedback during operations.

--- a/frontend/src/locales/en/common.json
+++ b/frontend/src/locales/en/common.json
@@ -15,5 +15,6 @@
   "actions": "Actions",
   "delete": "Delete",
   "activate": "Activate",
-  "deactivate": "Deactivate"
+  "deactivate": "Deactivate",
+  "search": "Search"
 } 
