--- a/frontend/src/locales/en/dashboard.json
+++ b/frontend/src/locales/en/dashboard.json
@@ -19,5 +19,82 @@
   "users": "Users",
   "content": "Content",
   "media": "Media",
-  "seo": "SEO"
+  "seo": "SEO",
+  
+  "loading": "Loading...",
+  "edit_content": "Edit Content",
+  "create_new_content": "Create New Content",
+  "back_to_content_list": "Back to Content List",
+  "title": "Title",
+  "slug": "Slug",
+  "content_type": "Content Type",
+  "content_field": "Content",
+  "status": "Status",
+  "page": "Page",
+  "post": "Post",
+  "product": "Product",
+  "draft": "Draft",
+  "published": "Published",
+  "generate": "Generate",
+  "cancel": "Cancel",
+  "saving": "Saving...",
+  "update_content": "Update Content",
+  "create_content": "Create Content",
+  "failed_fetch_content": "Failed to fetch content",
+  "failed_save_content": "Failed to save content",
+  "content_updated_title": "Content Updated",
+  "content_updated_desc": "Content has been successfully updated.",
+  "content_created_title": "Content Created",
+  "content_created_desc": "New content has been successfully created.",
+
+  "media_management": "Media Management",
+  "upload_media": "Upload Media",
+  "search_media": "Search media...",
+  "upload": "Upload",
+  "browse": "Browse",
+  "select_files": "Select Files",
+  "delete_selected": "Delete Selected",
+  "confirm_delete": "Confirm Delete",
+  "confirm_delete_message": "Are you sure you want to delete the selected media?",
+  "delete_success": "Media deleted successfully",
+  "upload_success": "Media uploaded successfully",
+  "files_uploaded": "files uploaded",
+  "failed_fetch_media": "Failed to fetch media",
+  "failed_upload_media": "Failed to upload media",
+  "failed_delete_media": "Failed to delete media",
+  "no_media_found": "No media found",
+  "previous": "Previous",
+  "next": "Next",
+  "file_name": "File Name",
+  "file_type": "File Type",
+  "file_size": "File Size",
+  "upload_date": "Upload Date",
+  "actions": "Actions",
+  "view": "View",
+  "download": "Download",
+  "delete": "Delete",
+  "uploading": "Uploading...",
+  "page_of": "Page {{current}} of {{total}}",
+  
+  "seo_management": "SEO Management",
+  "edit_seo": "Edit SEO",
+  "seo_settings": "SEO Settings",
+  "search": "Search",
+  "all_types": "All Types",
+  "meta_title": "Meta Title",
+  "meta_description": "Meta Description",
+  "meta_keywords": "Meta Keywords",
+  "og_title": "OG Title",
+  "og_description": "OG Description",
+  "og_image": "OG Image",
+  "canonical_url": "Canonical URL",
+  "no_index": "No Index",
+  "back_to_seo_list": "Back to SEO List",
+  "save_seo": "Save SEO",
+  "seo_saved": "SEO settings saved successfully",
+  "failed_save_seo": "Failed to save SEO settings",
+  "keywords_comma_separated": "Enter keywords separated by commas",
+  "seo_updated_title": "SEO Updated",
+  "seo_updated_desc": "SEO settings have been successfully updated.",
+  "no_content_found": "No content found"
 } 
