--- a/frontend/src/locales/he/common.json
+++ b/frontend/src/locales/he/common.json
@@ -15,5 +15,6 @@
   "actions": "פעולות",
   "delete": "מחק",
   "activate": "הפעל",
-  "deactivate": "השבת"
+  "deactivate": "השבת",
+  "search": "חיפוש"
 } 
