--- a/frontend/src/locales/he/dashboard.json
+++ b/frontend/src/locales/he/dashboard.json
@@ -19,5 +19,79 @@
   "users": "משתמשים",
   "content": "תוכן",
   "media": "מדיה",
-  "seo": "קידום אתרים"
+  "seo": "קידום אתרים",
+  
+  "loading": "טוען...",
+  "edit_content": "עריכת תוכן",
+  "create_new_content": "יצירת תוכן חדש",
+  "back_to_content_list": "חזרה לרשימת התכנים",
+  "title": "כותרת",
+  "slug": "מזהה URL",
+  "content_type": "סוג תוכן",
+  "content_field": "תוכן",
+  "status": "סטטוס",
+  "page": "עמוד",
+  "post": "פוסט",
+  "product": "מוצר",
+  "draft": "טיוטה",
+  "published": "פורסם",
+  "generate": "צור",
+  "cancel": "ביטול",
+  "saving": "שומר...",
+  "update_content": "עדכן תוכן",
+  "create_content": "צור תוכן",
+  "failed_fetch_content": "נכשל בטעינת התוכן",
+  "failed_save_content": "נכשל בשמירת התוכן",
+  "content_updated_title": "התוכן עודכן",
+  "content_updated_desc": "התוכן עודכן בהצלחה.",
+  "content_created_title": "התוכן נוצר",
+  "content_created_desc": "התוכן החדש נוצר בהצלחה.",
+  
+  "media_management": "ניהול מדיה",
+  "upload_media": "העלאת מדיה",
+  "search_media": "חיפוש מדיה...",
+  "upload": "העלאה",
+  "browse": "עיון",
+  "select_files": "בחר קבצים",
+  "delete_selected": "מחק נבחרים",
+  "confirm_delete": "אישור מחיקה",
+  "confirm_delete_message": "האם אתה בטוח שברצונך למחוק את המדיה שנבחרה?",
+  "delete_success": "המדיה נמחקה בהצלחה",
+  "upload_success": "המדיה הועלתה בהצלחה",
+  "files_uploaded": "קבצים הועלו",
+  "failed_fetch_media": "כשלון בטעינת המדיה",
+  "failed_upload_media": "כשלון בהעלאת המדיה",
+  "failed_delete_media": "כשלון במחיקת המדיה",
+  "no_media_found": "לא נמצאה מדיה",
+  "previous": "הקודם",
+  "next": "הבא",
+  "file_name": "שם הקובץ",
+  "file_type": "סוג הקובץ",
+  "file_size": "גודל הקובץ",
+  "upload_date": "תאריך העלאה",
+  "view": "צפייה",
+  "download": "הורדה",
+  "page_of": "עמוד {{current}} מתוך {{total}}",
+  
+  "seo_management": "ניהול קידום אתרים",
+  "edit_seo": "עריכת SEO",
+  "seo_settings": "הגדרות SEO",
+  "search": "חיפוש",
+  "all_types": "כל הסוגים",
+  "meta_title": "כותרת מטא",
+  "meta_description": "תיאור מטא",
+  "meta_keywords": "מילות מפתח",
+  "og_title": "כותרת OG",
+  "og_description": "תיאור OG",
+  "og_image": "תמונת OG",
+  "canonical_url": "כתובת קנונית",
+  "no_index": "ללא אינדוקס",
+  "back_to_seo_list": "חזרה לרשימת ה-SEO",
+  "save_seo": "שמור הגדרות SEO",
+  "seo_saved": "הגדרות ה-SEO נשמרו בהצלחה",
+  "failed_save_seo": "שמירת הגדרות SEO נכשלה",
+  "keywords_comma_separated": "הזן מילות מפתח מופרדות בפסיקים",
+  "seo_updated_title": "ה-SEO עודכן",
+  "seo_updated_desc": "הגדרות ה-SEO עודכנו בהצלחה.",
+  "no_content_found": "לא נמצא תוכן"
 } 
