Enhance error handling and internationalization in ContentManagement component
- Added new translation keys for error messages in English and Hebrew JSON files.
- Updated ContentManagement component to utilize translated error messages for failed data operations.
- Improved user feedback by displaying translated strings for unknown authors and error states.

--- a/frontend/src/locales/en/common.json
+++ b/frontend/src/locales/en/common.json
@@ -16,5 +16,10 @@
   "delete": "Delete",
   "activate": "Activate",
   "deactivate": "Deactivate",
-  "search": "Search"
+  "search": "Search",
+  "failed_load_users": "Failed to load users",
+  "failed_delete_user": "Failed to delete user",
+  "failed_fetch_data": "Failed to fetch data",
+  "failed_save_data": "Failed to save data",
+  "unknown": "Unknown"
 } 
