Enhance internationalization in dashboard and content management
- Added new translation keys for author, created, confirm delete content, and pagination in English and Hebrew JSON files.
- Updated ContentManagement component to utilize new translation keys for improved user experience and consistency.
- Refactored table headers and button texts to use translated strings, enhancing accessibility for international users.

--- a/frontend/src/locales/en/dashboard.json
+++ b/frontend/src/locales/en/dashboard.json
@@ -20,6 +20,8 @@
   "content": "Content",
   "media": "Media",
   "seo": "SEO",
+  "author": "Author",
+  "created": "Created",
   
   "loading": "Loading...",
   "edit_content": "Edit Content",
@@ -96,5 +98,7 @@
   "keywords_comma_separated": "Enter keywords separated by commas",
   "seo_updated_title": "SEO Updated",
   "seo_updated_desc": "SEO settings have been successfully updated.",
-  "no_content_found": "No content found"
+  "no_content_found": "No content found",
+  "confirm_delete_content": "Are you sure you want to delete \"{{title}}\"?",
+  "pagination": "Page {{currentPage}} of {{totalPages}}"
 } 
