Enhance localization files for improved user experience
- Updated English and Hebrew localization files to provide clearer and more concise text for authentication, common actions, and dashboard features.
- Added new keys for error messages and loading states to enhance user feedback during login and registration processes.
- Improved SEO-related placeholders and messages in the dashboard localization for better guidance on content management.

--- a/frontend/src/locales/en/auth.json
+++ b/frontend/src/locales/en/auth.json
@@ -1,8 +1,14 @@
 {
-  "login_page": "Login page",
+  "login_page": "Login",
   "login": "Login",
-  "register_page": "Register page",
+  "register_page": "Register",
   "register": "Register",
   "login_success": "Login successful",
-  "register_success": "Registration successful"
+  "register_success": "Registration successful",
+  "login_failed": "Login failed",
+  "logging_in": "Logging in...",
+  "passwords_do_not_match": "Passwords do not match",
+  "registration_failed": "Registration failed",
+  "enter_name": "Enter your name",
+  "registering": "Registering..."
 } 
