--- a/frontend/src/locales/he/auth.json
+++ b/frontend/src/locales/he/auth.json
@@ -4,5 +4,11 @@
   "register_page": "הרשמה",
   "register": "הרשמה",
   "login_success": "התחברת בהצלחה",
-  "register_success": "הרשמתך בוצעה בהצלחה"
+  "register_success": "הרשמתך בוצעה בהצלחה",
+  "login_failed": "ההתחברות נכשלה",
+  "logging_in": "מתחבר...",
+  "passwords_do_not_match": "הסיסמאות אינן תואמות",
+  "registration_failed": "ההרשמה נכשלה",
+  "enter_name": "הכנס שם",
+  "registering": "נרשם..."
 } 
