--- a/frontend/src/locales/he/common.json
+++ b/frontend/src/locales/he/common.json
@@ -21,5 +21,8 @@
   "failed_delete_user": "מחיקת המשתמש נכשלה",
   "failed_fetch_data": "טעינת הנתונים נכשלה",
   "failed_save_data": "שמירת הנתונים נכשלה",
-  "unknown": "לא ידוע"
+  "unknown": "לא ידוע",
+  "characters": "תווים",
+  "cancel": "ביטול",
+  "saving": "שומר..."
 } 
