Update localization files for English and Hebrew
- Added new translations for "Edit", "Updated", and various content management terms in both English and Hebrew.
- Enhanced error messages for deletion actions and updated confirmation prompts for better clarity.
- Included additional terms related to content management, such as "Categories", "Tags", and status indicators for pages, posts, and products.

--- a/frontend/src/locales/en/common.json
+++ b/frontend/src/locales/en/common.json
@@ -14,6 +14,7 @@
   "role": "Role",
   "actions": "Actions",
   "delete": "Delete",
+  "edit": "Edit",
   "activate": "Activate",
   "deactivate": "Deactivate",
   "search": "Search",
@@ -21,8 +22,11 @@
   "failed_delete_user": "Failed to delete user",
   "failed_fetch_data": "Failed to fetch data",
   "failed_save_data": "Failed to save data",
+  "failed_delete": "Failed to delete item",
   "unknown": "Unknown",
   "characters": "characters",
   "cancel": "Cancel",
-  "saving": "Saving..."
+  "saving": "Saving...",
+  "yes": "Yes",
+  "no": "No"
 } 
