--- a/frontend/src/locales/en/dashboard.json
+++ b/frontend/src/locales/en/dashboard.json
@@ -22,6 +22,7 @@
   "seo": "SEO",
   "author": "Author",
   "created": "Created",
+  "updated": "Updated",
   
   "loading": "Loading...",
   "edit_content": "Edit Content",
@@ -35,8 +36,16 @@
   "page": "Page",
   "post": "Post",
   "product": "Product",
+  "pages": "Pages",
+  "posts": "Posts",
+  "products": "Products",
+  "create_new_page": "Create New Page",
+  "create_new_post": "Create New Post",
+  "create_new_product": "Create New Product",
   "draft": "Draft",
   "published": "Published",
+  "archived": "Archived",
+  "all_statuses": "All Statuses",
   "generate": "Generate",
   "cancel": "Cancel",
   "saving": "Saving...",
@@ -48,6 +57,9 @@
   "content_updated_desc": "Content has been successfully updated.",
   "content_created_title": "Content Created",
   "content_created_desc": "New content has been successfully created.",
+  "page_deleted_successfully": "Page deleted successfully",
+  "post_deleted_successfully": "Post deleted successfully",
+  "product_deleted_successfully": "Product deleted successfully",
 
   "media_management": "Media Management",
   "upload_media": "Upload Media",
@@ -77,6 +89,14 @@
   "delete": "Delete",
   "uploading": "Uploading...",
   "page_of": "Page {{current}} of {{total}}",
+  "categories": "Categories",
+  "tags": "Tags",
+  "sku": "SKU",
+  "price": "Price",
+  "in_stock": "In Stock",
+  "no_pages_found": "No pages found",
+  "no_posts_found": "No posts found",
+  "no_products_found": "No products found",
   
   "seo_management": "SEO Management",
   "edit_seo": "Edit SEO",
@@ -99,7 +119,7 @@
   "seo_updated_title": "SEO Updated",
   "seo_updated_desc": "SEO settings have been successfully updated.",
   "no_content_found": "No content found",
-  "confirm_delete_content": "Are you sure you want to delete \"{{title}}\"?",
+  "confirm_delete_content": "Are you sure you want to delete this item?",
   "pagination": "Page {{currentPage}} of {{totalPages}}",
   "content_not_found": "Content not found",
   "edit_seo_for": "Edit SEO for: {{title}}",
