--- a/frontend/src/locales/he/dashboard.json
+++ b/frontend/src/locales/he/dashboard.json
@@ -22,6 +22,7 @@
   "seo": "קידום אתרים",
   "author": "מחבר",
   "created": "נוצר",
+  "updated": "עודכן",
   
   "loading": "טוען...",
   "edit_content": "עריכת תוכן",
@@ -35,8 +36,16 @@
   "page": "עמוד",
   "post": "פוסט",
   "product": "מוצר",
+  "pages": "עמודים",
+  "posts": "פוסטים",
+  "products": "מוצרים",
+  "create_new_page": "צור עמוד חדש",
+  "create_new_post": "צור פוסט חדש",
+  "create_new_product": "צור מוצר חדש",
   "draft": "טיוטה",
   "published": "פורסם",
+  "archived": "בארכיון",
+  "all_statuses": "כל הסטטוסים",
   "generate": "צור",
   "cancel": "ביטול",
   "saving": "שומר...",
@@ -48,6 +57,9 @@
   "content_updated_desc": "התוכן עודכן בהצלחה.",
   "content_created_title": "התוכן נוצר",
   "content_created_desc": "התוכן החדש נוצר בהצלחה.",
+  "page_deleted_successfully": "העמוד נמחק בהצלחה",
+  "post_deleted_successfully": "הפוסט נמחק בהצלחה",
+  "product_deleted_successfully": "המוצר נמחק בהצלחה",
   
   "media_management": "ניהול מדיה",
   "upload_media": "העלאת מדיה",
@@ -74,6 +86,14 @@
   "view": "צפייה",
   "download": "הורדה",
   "page_of": "עמוד {{current}} מתוך {{total}}",
+  "categories": "קטגוריות",
+  "tags": "תגיות",
+  "sku": "מק״ט",
+  "price": "מחיר",
+  "in_stock": "במלאי",
+  "no_pages_found": "לא נמצאו עמודים",
+  "no_posts_found": "לא נמצאו פוסטים",
+  "no_products_found": "לא נמצאו מוצרים",
   
   "seo_management": "ניהול קידום אתרים",
   "edit_seo": "עריכת SEO",
@@ -96,7 +116,7 @@
   "seo_updated_title": "ה-SEO עודכן",
   "seo_updated_desc": "הגדרות ה-SEO עודכנו בהצלחה.",
   "no_content_found": "לא נמצא תוכן",
-  "confirm_delete_content": "האם אתה בטוח שברצונך למחוק את \"{{title}}\"?",
+  "confirm_delete_content": "האם אתה בטוח שברצונך למחוק פריט זה?",
   "pagination": "עמוד {{currentPage}} מתוך {{totalPages}}",
   
   "content_not_found": "התוכן לא נמצא",
