Enhance localization and user experience in content management forms
- Integrated i18next for translation support in ProtectedRoute, SEOSection, PageForm, and PostForm components, improving accessibility for multilingual users.
- Updated loading indicators and labels in forms to utilize localized strings, enhancing clarity and user feedback.
- Added new translation keys for SEO-related fields and loading messages in both English and Hebrew, ensuring consistent terminology across the application.

--- a/frontend/src/locales/en/dashboard.json
+++ b/frontend/src/locales/en/dashboard.json
@@ -134,5 +134,61 @@
   "canonical_url_placeholder": "Canonical URL (if different from current URL)",
   "seo_updated": "SEO Updated",
   "failed_update_seo": "Failed to update SEO data",
-  "save_seo_settings": "Save SEO Settings"
+  "save_seo_settings": "Save SEO Settings",
+  "meta_title_label": "Meta Title",
+  "meta_description_label": "Meta Description",
+  "meta_keywords_label": "Meta Keywords",
+  "canonical_url_label": "Canonical URL",
+  "no_index_label": "No Index (tell search engines not to index this page)",
+  "og_title_label": "OG Title",
+  "og_description_label": "OG Description",
+  "og_image_label": "OG Image URL",
+  "twitter_title_label": "Twitter Title",
+  "twitter_description_label": "Twitter Description",
+  "twitter_image_label": "Twitter Image URL",
+  "structured_data_label": "Structured Data (JSON-LD)",
+  "meta_title_helper": "Recommended length: 50-60 characters",
+  "meta_description_helper": "Recommended length: 150-160 characters",
+  "meta_keywords_helper": "Separate keywords with commas",
+  "og_image_helper": "URL to the image shown when shared on social media",
+  "structured_data_helper": "Advanced: Enter JSON-LD structured data",
+  "select_media": "Select Media",
+  "add_embedded_media": "Add Embedded Media",
+  "all_media": "All Media",
+  "images": "Images",
+  "videos": "Videos",
+  "embedded": "Embedded",
+  "title_placeholder": "Enter title",
+  "media_source": "Media Source",
+  "url_placeholder": "Enter URL",
+  "embed_code": "Embed Code",
+  "embed_code_help": "Enter the full embed code",
+  "embed_code_help_youtube": "Copy the embed code from YouTube",
+  "embed_code_help_vimeo": "Copy the embed code from Vimeo",
+  "embed_code_placeholder": "Enter embed code",
+  "alt_text": "Alt Text",
+  "alt_placeholder": "Enter alt text",
+  "caption": "Caption",
+  "caption_placeholder": "Enter caption",
+  "adding": "Adding...",
+  "add": "Add",
+  "media_added_successfully": "Media added successfully",
+  "failed_add_media": "Failed to add media",
+  "edit_post": "Edit Post",
+  "url_friendly_version": "The URL-friendly version of the title",
+  "post_settings": "Post Settings",
+  "publish_date": "Publish Date",
+  "featured_image": "Featured Image",
+  "select_featured_image": "Select Featured Image",
+  "change_featured_image": "Change Featured Image",
+  "selected_image": "Selected Image:",
+  "add_tag": "Add Tag",
+  "update_post": "Update Post",
+  "create_post": "Create Post",
+  "image_url": "Image URL",
+  "layout": "Layout",
+  "default": "Default",
+  "full_width": "Full Width",
+  "with_sidebar": "With Sidebar",
+  "order": "Order"
 } 
