--- a/frontend/src/locales/he/dashboard.json
+++ b/frontend/src/locales/he/dashboard.json
@@ -133,5 +133,61 @@
   "seo_updated": "הגדרות SEO עודכנו",
   "failed_update_seo": "שגיאה בעדכון הגדרות SEO",
   "save_seo_settings": "שמור הגדרות SEO",
-  "uploading": "מעלה..."
+  "uploading": "מעלה...",
+  "meta_title_label": "כותרת מטא",
+  "meta_description_label": "תיאור מטא",
+  "meta_keywords_label": "מילות מפתח מטא",
+  "canonical_url_label": "כתובת URL קנונית",
+  "no_index_label": "אל תאנדקס (ספר למנועי חיפוש לא לאנדקס דף זה)",
+  "og_title_label": "כותרת OG",
+  "og_description_label": "תיאור OG",
+  "og_image_label": "כתובת URL של תמונת OG",
+  "twitter_title_label": "כותרת טוויטר",
+  "twitter_description_label": "תיאור טוויטר",
+  "twitter_image_label": "כתובת URL של תמונת טוויטר",
+  "structured_data_label": "נתונים מובנים (JSON-LD)",
+  "meta_title_helper": "אורך מומלץ: 50-60 תווים",
+  "meta_description_helper": "אורך מומלץ: 150-160 תווים",
+  "meta_keywords_helper": "הפרד מילות מפתח בפסיקים",
+  "og_image_helper": "כתובת URL לתמונה שמוצגת בשיתוף ברשתות חברתיות",
+  "structured_data_helper": "מתקדם: הזן נתונים מובנים ב-JSON-LD",
+  "select_media": "בחר מדיה",
+  "add_embedded_media": "הוסף מדיה מוטמעת",
+  "all_media": "כל המדיה",
+  "images": "תמונות",
+  "videos": "סרטונים",
+  "embedded": "מוטמע",
+  "title_placeholder": "הזן כותרת",
+  "media_source": "מקור המדיה",
+  "url_placeholder": "הזן כתובת URL",
+  "embed_code": "קוד הטמעה",
+  "embed_code_help": "הזן את קוד ההטמעה המלא",
+  "embed_code_help_youtube": "העתק את קוד ההטמעה מ-YouTube",
+  "embed_code_help_vimeo": "העתק את קוד ההטמעה מ-Vimeo",
+  "embed_code_placeholder": "הזן את קוד ההטמעה",
+  "alt_text": "טקסט חלופי",
+  "alt_placeholder": "הזן טקסט חלופי",
+  "caption": "כיתוב",
+  "caption_placeholder": "הזן כיתוב",
+  "adding": "מוסיף...",
+  "add": "הוסף",
+  "media_added_successfully": "המדיה נוספה בהצלחה",
+  "failed_add_media": "שגיאה בהוספת המדיה",
+  "edit_post": "עריכת פוסט",
+  "url_friendly_version": "גרסה ידידותית ל-URL של הכותרת",
+  "post_settings": "הגדרות פוסט",
+  "publish_date": "תאריך פרסום",
+  "featured_image": "תמונת כותרת",
+  "select_featured_image": "בחר תמונת כותרת",
+  "change_featured_image": "שנה תמונת כותרת",
+  "selected_image": "תמונה נבחרה:",
+  "add_tag": "הוסף תג",
+  "update_post": "עדכן פוסט",
+  "create_post": "צור פוסט",
+  "image_url": "כתובת URL של תמונה",
+  "layout": "תבנית",
+  "default": "ברירת מחדל",
+  "full_width": "רוחב מלא",
+  "with_sidebar": "עם סרגל צד",
+  "order": "סדר"
 } 
