Add form submission management features and enhance content handling
- Introduced form submission routes and controllers for creating, retrieving, updating, and deleting form submissions, improving user interaction with forms.
- Updated content model to reflect changes in content type handling, enhancing data integrity.
- Implemented new frontend components for form submissions, including a dedicated page for viewing and managing submissions, improving admin capabilities.
- Enhanced localization support for form-related messages and UI elements, ensuring a consistent user experience across languages.

--- a/frontend/src/locales/en/dashboard.json
+++ b/frontend/src/locales/en/dashboard.json
@@ -17,6 +17,7 @@
   "coach_added": "Coach added successfully",
   "content_management": "Content Management",
   "users": "Users",
+  "form_submissions": "Form Submissions",
   "content": "Content",
   "media": "Media",
   "seo": "SEO",
@@ -190,5 +191,42 @@
   "default": "Default",
   "full_width": "Full Width",
   "with_sidebar": "With Sidebar",
-  "order": "Order"
+  "order": "Order",
+
+  "forms": {
+    "submissionsTitle": "Form Submissions",
+    "date": "Date",
+    "type": "Form Type",
+    "name": "Name",
+    "email": "Email",
+    "phone": "Phone",
+    "message": "Message",
+    "status": "Status",
+    "statusNew": "New",
+    "statusRead": "Read",
+    "statusReplied": "Replied",
+    "statusArchived": "Archived",
+    "viewDetails": "View Details",
+    "formDetails": "Form Details",
+    "notProvided": "Not provided",
+    "deleteConfirm": "Are you sure you want to delete this form submission?",
+    "deleted": "Form submission deleted successfully",
+    "statusUpdated": "Status updated successfully",
+    "fetchError": "Failed to load form submissions",
+    "updateError": "Failed to update status",
+    "deleteError": "Failed to delete form submission",
+    "noSubmissions": "No form submissions found",
+    "filterByType": "Filter by Form Type",
+    "filterByStatus": "Filter by Status",
+    "search": "Search",
+    "searchPlaceholder": "Search by name, email or message",
+    "allTypes": "All Types",
+    "allStatuses": "All Statuses",
+    "totalSubmissions": "Total Submissions",
+    "filtered": "filtered",
+    "contact": "Contact",
+    "newsletter": "Newsletter",
+    "support": "Support",
+    "other": "Other"
+  }
 } 
