--- a/frontend/src/locales/he/common.json
+++ b/frontend/src/locales/he/common.json
@@ -28,5 +28,9 @@
   "cancel": "ביטול",
   "saving": "שומר...",
   "yes": "כן",
-  "no": "לא"
+  "no": "לא",
+  "loading": "טוען...",
+  "status": "סטטוס",
+  "active": "פעיל",
+  "inactive": "לא פעיל"
 } 
