--- a/frontend/src/locales/he/dashboard.json
+++ b/frontend/src/locales/he/dashboard.json
@@ -17,6 +17,7 @@
   "coach_added": "המאמן נוסף בהצלחה",
   "content_management": "ניהול תוכן",
   "users": "משתמשים",
+  "form_submissions": "טפסים שנשלחו",
   "content": "תוכן",
   "media": "מדיה",
   "seo": "קידום אתרים",
@@ -189,5 +190,42 @@
   "default": "ברירת מחדל",
   "full_width": "רוחב מלא",
   "with_sidebar": "עם סרגל צד",
-  "order": "סדר"
+  "order": "סדר",
+
+  "forms": {
+    "submissionsTitle": "טפסים שנשלחו",
+    "date": "תאריך",
+    "type": "סוג טופס",
+    "name": "שם",
+    "email": "דוא\"ל",
+    "phone": "טלפון",
+    "message": "הודעה",
+    "status": "סטטוס",
+    "statusNew": "חדש",
+    "statusRead": "נקרא",
+    "statusReplied": "הושב",
+    "statusArchived": "בארכיון",
+    "viewDetails": "פרטים מלאים",
+    "formDetails": "פרטי הטופס",
+    "notProvided": "לא סופק",
+    "deleteConfirm": "האם אתה בטוח שברצונך למחוק שליחת טופס זו?",
+    "deleted": "הטופס נמחק בהצלחה",
+    "statusUpdated": "הסטטוס עודכן בהצלחה",
+    "fetchError": "שגיאה בטעינת הטפסים",
+    "updateError": "שגיאה בעדכון הסטטוס",
+    "deleteError": "שגיאה במחיקת הטופס",
+    "noSubmissions": "לא נמצאו טפסים שנשלחו",
+    "filterByType": "סינון לפי סוג",
+    "filterByStatus": "סינון לפי סטטוס",
+    "search": "חיפוש",
+    "searchPlaceholder": "חיפוש לפי שם, דוא\"ל או הודעה",
+    "allTypes": "כל הסוגים",
+    "allStatuses": "כל הסטטוסים",
+    "totalSubmissions": "סה\"כ טפסים",
+    "filtered": "מסוננים",
+    "contact": "יצירת קשר",
+    "newsletter": "דיוור",
+    "support": "תמיכה",
+    "other": "אחר"
+  }
 } 
