Add localization support for forms and enhance form submission management
- Introduced new localization files for form-related content in English and Hebrew, improving accessibility for multilingual users.
- Updated the FormSubmissions component to utilize the new localization keys, enhancing user experience and consistency across the application.
- Enhanced error and success messages in the form submission process, ensuring clear communication with users.
- Added new fields and improved existing translations in forms.json files, enriching the user interface and interaction.

--- a/frontend/src/locales/en/forms.json
+++ b/frontend/src/locales/en/forms.json
@@ -10,7 +10,7 @@
   "errorMessage": "Sorry, there was an error sending your message. Please try again later.",
   "submissionsTitle": "Form Submissions",
   "date": "Date",
-  "type": "Type",
+  "type": "Form Type",
   "status": "Status",
   "statusNew": "New",
   "statusRead": "Read",
@@ -19,5 +19,23 @@
   "fetchError": "Error loading form submissions",
   "updateError": "Error updating form status",
   "deleteError": "Error deleting form submission",
-  "deleteConfirm": "Are you sure you want to delete this submission?"
+  "deleteConfirm": "Are you sure you want to delete this submission?",
+  "viewDetails": "View Details",
+  "formDetails": "Form Details",
+  "notProvided": "Not provided",
+  "deleted": "Form deleted successfully",
+  "statusUpdated": "Status updated successfully",
+  "noSubmissions": "No form submissions found",
+  "filterByType": "Filter by Type",
+  "filterByStatus": "Filter by Status",
+  "search": "Search",
+  "searchPlaceholder": "Search by name, email or message",
+  "allTypes": "All Types",
+  "allStatuses": "All Statuses",
+  "totalSubmissions": "Total Submissions",
+  "filtered": "filtered",
+  "contact": "Contact",
+  "newsletter": "Newsletter",
+  "support": "Support",
+  "other": "Other"
 } 
