--- a/frontend/src/locales/he/forms.json
+++ b/frontend/src/locales/he/forms.json
@@ -1,41 +1,41 @@
 {
   "contactTitle": "צור קשר",
   "name": "שם",
-  "email": "אימייל",
+  "email": "דוא\"ל",
   "phone": "טלפון",
   "message": "הודעה",
   "submit": "שלח",
   "sending": "שולח...",
   "successMessage": "תודה! הודעתך התקבלה בהצלחה. נחזור אליך בהקדם.",
   "errorMessage": "מצטערים, אירעה שגיאה בשליחת ההודעה. אנא נסה שוב מאוחר יותר.",
-  "submissionsTitle": "ניהול טפסים",
+  "submissionsTitle": "טפסים שנשלחו",
   "date": "תאריך",
-  "type": "סוג",
+  "type": "סוג טופס",
   "status": "סטטוס",
   "statusNew": "חדש",
   "statusRead": "נקרא",
-  "statusReplied": "נענה",
+  "statusReplied": "הושב",
   "statusArchived": "בארכיון",
   "fetchError": "שגיאה בטעינת הטפסים",
-  "updateError": "שגיאה בעדכון סטטוס הטופס",
+  "updateError": "שגיאה בעדכון הסטטוס",
   "deleteError": "שגיאה במחיקת הטופס",
-  "deleteConfirm": "האם אתה בטוח שברצונך למחוק טופס זה?",
-  "viewDetails": "הצג פרטים",
+  "deleteConfirm": "האם אתה בטוח שברצונך למחוק שליחת טופס זו?",
+  "viewDetails": "פרטים מלאים",
   "formDetails": "פרטי הטופס",
   "notProvided": "לא סופק",
   "deleted": "הטופס נמחק בהצלחה",
   "statusUpdated": "הסטטוס עודכן בהצלחה",
-  "noSubmissions": "לא נמצאו טפסים",
-  "filterByType": "סנן לפי סוג",
-  "filterByStatus": "סנן לפי סטטוס",
+  "noSubmissions": "לא נמצאו טפסים שנשלחו",
+  "filterByType": "סינון לפי סוג",
+  "filterByStatus": "סינון לפי סטטוס",
   "search": "חיפוש",
-  "searchPlaceholder": "חפש לפי שם, אימייל או הודעה",
+  "searchPlaceholder": "חיפוש לפי שם, דוא\"ל או הודעה",
   "allTypes": "כל הסוגים",
   "allStatuses": "כל הסטטוסים",
   "totalSubmissions": "סה\"כ טפסים",
   "filtered": "מסוננים",
   "contact": "יצירת קשר",
-  "newsletter": "רשימת תפוצה",
+  "newsletter": "דיוור",
   "support": "תמיכה",
   "other": "אחר"
 } 
